--- a/RPG_ClassRoom_Test_V1/Shared/NavMenu.razor
+++ b/RPG_ClassRoom_Test_V1/Shared/NavMenu.razor
@@ -24,6 +24,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="c_s_m">
+                <span class="oi oi-plus" aria-hidden="true"></span> Create Skill Tree
+            </NavLink>
+        </div>
     </nav>
 </div>
 
