--- a/BlazorApp1/Pages/TakeAssignment.razor
+++ b/BlazorApp1/Pages/TakeAssignment.razor
@@ -33,7 +33,7 @@
     [Parameter]
     public string name { get; set; }
 
-    private string FolderPath = @"C:\Users\Caleb\Desktop\BlazorApp1\AssignmentFolder\";
+    private string FolderPath =  Directory.GetCurrentDirectory() + @"\AssignmentFolder\";
     private List<AssignmentQuestion> Questions;
     AssignmentQuestion question;
     private bool QuestionSec;
