--- a/BlazorApp1/Pages/SkillTree.razor
+++ b/BlazorApp1/Pages/SkillTree.razor
@@ -38,9 +38,12 @@
     {
         <div id="@node.name" class="nodeCSS" @onclick="() => NodePage(node)"> <p> @node.name </p> </div>
     }
+    <div id="userIcon" class="UserCSS"> </div>
 }
 
+
 @code {
+    string test = null;
 
     bool NodeSec, ConnectionSec, Connectors;
 
@@ -74,6 +77,14 @@
             foreach (Node node in Nodes)
             {
                 await JS.InvokeVoidAsync("setNodePosistion", node.name, node.xPosistion, node.yPosistion);
+                if(node.startingNode)
+                {
+                    string xstring = node.xPosistion.Remove(node.xPosistion.Length-2);
+                    Decimal xint = Decimal.Parse(xstring) + 50;
+                    string finalthing = xint + "px";
+
+                    await JS.InvokeVoidAsync("setNodePosistion", "userIcon", finalthing, node.yPosistion);
+                }
             }
             foreach (Connectors conectors in Connections)
             {
@@ -139,6 +150,8 @@
                 node.width = info[5];
                 node.height = info[6];
 
+                node.startingNode = bool.Parse(info[7]);
+
                 Nodes.Add(node);
             }
             else if (ConnectionSec)
@@ -179,7 +192,7 @@
         }
     }
 
-    public void NodePage(Node node)
+    private void NodePage(Node node)
     {
         UriHelper.NavigateTo($"nodeinformation/{node.name}/{FileName}");
     }
