Added a education type data var for nodes

--- a/BlazorApp1/Pages/MakeSkillTree.razor
+++ b/BlazorApp1/Pages/MakeSkillTree.razor
@@ -133,7 +133,6 @@
                 SelectedNode.NodeConnections.Add(node);
             }
         }
-
     }
 
     // sets clicked connector to be selected
@@ -288,6 +287,8 @@
             TreeInfo += posistion[3] + "px;";
 
             TreeInfo += node.startingNode +";";
+
+            TreeInfo += node.EducationType +";";
 
             TreeInfo += "\n";
 
