--- a/BlazorApp1/Pages/SkillTree.razor
+++ b/BlazorApp1/Pages/SkillTree.razor
@@ -151,6 +151,7 @@
                 node.height = info[6];
 
                 node.startingNode = bool.Parse(info[7]);
+                node.EducationType = info[8];
 
                 Nodes.Add(node);
             }
