Added moving through the skill tree V2

--- a/BlazorApp1/Pages/SkillTree.razor
+++ b/BlazorApp1/Pages/SkillTree.razor
@@ -201,7 +201,7 @@
     {
         foreach(Node node in Nodes)
         {
-            if(node.startingNode)
+            if(node.startingNode || node.userAt)
             {
                 node.userAt = true;
                 foreach(Node n in node.NodeConnections)
