--- a/BlazorApp1/Pages/Index.razor
+++ b/BlazorApp1/Pages/Index.razor
@@ -1,9 +1,18 @@
-﻿@page "/"
+﻿@page "/home"
+
+@using Objects
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Hello @User.UserName</h1>
 
-Welcome to your new app.
+Welcome to your RPG classroom.
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+@code {
+    private User user = new User();
+
+    protected override async Task OnInitializedAsync()
+    {
+        user = user.buildUser();
+    }
+}
