--- a/BlazorApp1/Shared/MainLayout.razor
+++ b/BlazorApp1/Shared/MainLayout.razor
@@ -1,4 +1,5 @@
 ﻿@inherits LayoutComponentBase
+@inject NavigationManager UriHelper
 
 <PageTitle>BlazorApp1</PageTitle>
 
@@ -9,7 +10,7 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <button class="btn btn-primary" @onclick="Logout">Logout</button>
         </div>
 
         <article class="content px-4">
@@ -17,3 +18,10 @@
         </article>
     </main>
 </div>
+
+@code{
+    public void Logout()
+    {
+        UriHelper.NavigateTo($"");
+    }
+}
