--- a/BlazorApp1/Pages/Login.razor
+++ b/BlazorApp1/Pages/Login.razor
@@ -2,33 +2,186 @@
 
 @page "/"
 
+@using Microsoft.AspNetCore.Cryptography.KeyDerivation;
+@using System.Security.Cryptography;
 @using Objects
+@using System.Text;
+
 @inject NavigationManager UriHelper
 
-<h1> RPG Classroom Login</h1>
+@if (hasAccount)
+{
+    <h1> RPG Classroom Login</h1>
 
-<EditForm Model="@user">
-    <label for="UserName"> User Name</label>
-    <InputText id="UserName" @bind-Value="@name" placeholder="username" /> <br />
-    <label for="UserPassword"> Password</label>
-    <InputText id="UserPassword" @bind-Value="@password" placeholder="password" type="password" /> <br />
-</EditForm>
+    <EditForm Model="@user">
+        @if (!currectAccount)
+        {
+            <p>Your user name is not correct</p>
+        }
+        <label for="UserName"> User Name</label>
+        <InputText id="UserName" @bind-Value="@name" placeholder="username" /> <br />
+        @if (!currectPassword)
+        {
+            <p>Your password is not correct</p>
+        }
+        <label for="UserPassword"> Password</label>
+        <InputText id="UserPassword" @bind-Value="@password" placeholder="password" type="password" /> <br />
+    </EditForm>
 
+    <button class="btn btn-primary" @onclick="newAccount"> Make a Account </button>  <br />
 
-<button class="btn btn-primary" @onclick="Submit"> Submit </button>
+    <button class="btn btn-primary" @onclick="Submit"> Submit </button>
+}
+else
+{
+    <EditForm Model="@user">
+        <p>Please enter a username</p>
+        <label for="UserName"> User Name</label>
+        <InputText id="UserName" @bind-Value="newName" placeholder="username" /> <br />
 
+        <p>Please enter a password</p>
+        <label for="UserPassword"> Password</label>
+        <InputText id="UserPassword" @bind-Value="newPassword1" placeholder="password" type="password" /> <br />
+
+        <p>Please enter in the password again</p>
+        <label for="UserPassword"> Password</label>
+        <InputText id="UserPassword" @bind-Value="newPassword2" placeholder="password" type="password" /> <br />
+    </EditForm>
+
+    <button class="btn btn-primary" @onclick="SubmitNewAccount"> Submit </button>
+}
 @code {
 
     private User user = new User();
-    private string name;
-    private string password;
+    private string name, password, hashed;
+    private List<string> accounts = new List<string>();
+    private string FolderPath = Directory.GetCurrentDirectory() + @"\UserRecords\";
+
+    private bool currectAccount = true, currectPassword = true;
+
+    HashAlgorithmName hashAlgorthm = HashAlgorithmName.SHA512;
+
+    private bool hasAccount = true;
+
+    protected override async Task OnInitializedAsync()
+    {
+        foreach (string file in Directory.GetFiles(FolderPath))
+        {
+            accounts.Add(Path.GetFileNameWithoutExtension(file));
+        }
+    }
 
     private void Submit()
     {
+        currectAccount = true;
+        currectPassword = true;
+
+        // for testing purposes only
+        if(name == "test")
+        {
+            User.UserName = name;
+            UriHelper.NavigateTo($"home");
+            return;
+        }
+
+        if(name == null)
+        {
+            currectAccount = false;
+            return;
+        }
+        else if(password == null)
+        {
+            currectPassword = false;
+            return;
+        }
+
+        if (!accounts.Contains(name))
+        {
+            currectAccount = false;
+            return;
+        }
+
         User.UserName = name;
         user = user.buildUser();
-        user.Password = password;
-        UriHelper.NavigateTo($"home");
+
+        // Generate a 128-bit salt using a sequence of
+        // cryptographically strong random bytes.
+        // byte[] salt = RandomNumberGenerator.GetBytes(128 / 8); // divide by 8 to convert bits to bytes
+
+        byte[] salt = { 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16 };
+
+        // derive a 256-bit subkey (use HMACSHA256 with 100,000 iterations)
+        hashed = Convert.ToBase64String(KeyDerivation.Pbkdf2(
+            password: password!,
+            salt: salt,
+            prf: KeyDerivationPrf.HMACSHA256,
+            iterationCount: 100000,
+            numBytesRequested: 256 / 8));
+
+
+        if (user.Password == hashed){
+            UriHelper.NavigateTo($"home");
+        }
+        else{
+            currectPassword = false;
+            return;
+        }
+    }
+
+    private void newAccount(){
+        hasAccount = false;
+    }
+
+    private string newName, newPassword1, newPassword2, accountInfo;
+    private void SubmitNewAccount()
+    {
+        accountInfo = "";
+
+        if (newName == null || newPassword1 == null || newPassword2 == null)
+        {
+            // please fill in all your infomation
+        }
+        else if (accounts.Contains(newName))
+        {
+            // account name already taken
+        }
+        else if (newPassword1 != newPassword2)
+        {
+            // passwords are not the same
+        }
+        else
+        {
+            FileStream FileWrite = new FileStream(FolderPath + newName+".txt", FileMode.Create, FileAccess.Write, FileShare.None);
+
+            accountInfo += "NAME|\n" + newName + "\n";
+
+            byte[] salt = { 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16 };
+
+            // derive a 256-bit subkey (use HMACSHA256 with 100,000 iterations)
+            hashed = Convert.ToBase64String(KeyDerivation.Pbkdf2(
+                password: newPassword1!,
+                salt: salt,
+                prf: KeyDerivationPrf.HMACSHA256,
+                iterationCount: 100000,
+                numBytesRequested: 256 / 8));
+
+            accountInfo += "PASSWORD|\n" + hashed + "\n";
+
+            accountInfo += "GENERAL|\nGeneral information\nBADGES|\nNo badges yet\nITEMS|\nNo items yet\nSTUFF|\nRandom information\nLEVEL|\n0";
+
+            // Store the text in a byte array with. UTF8 encoding (8-bit Unicode. Transformation Format)
+            byte[] writeArr = Encoding.UTF8.GetBytes(accountInfo);
+
+            // Using the Write method write the encoded byte array to the textfile
+            FileWrite.Write(writeArr, 0, accountInfo.Length);
+
+            // Closee the FileStream object
+            FileWrite.Close();
+
+            User.UserName = newName;
+
+            UriHelper.NavigateTo($"home");
+        }
     }
 
 }
