--- a/BlazorApp1/Pages/_Layout.cshtml
+++ b/BlazorApp1/Pages/_Layout.cshtml
@@ -32,5 +32,6 @@
     <script src="~/JSFolder/DragAndDrop.js"></script>
     <script src="~/JSFolder/Resize-Drag.js"></script>
     <script src="~/JSFolder/xyValues.js"></script>
+    <script src="~/JSFolder/UserInput.js"></script>
 </body>
 </html>
