--- a/BlazorApp1/Pages/Persona.razor
+++ b/BlazorApp1/Pages/Persona.razor
@@ -2,7 +2,7 @@
 
 @using Objects
 
-<h3>Welcome @User.UserName: level #@user.Level</h3>
+<h3>Welcome @User.UserName (@user.Type): level #@user.Level</h3>
 
 <br/>
 
