Data saves after login out

--- a/BlazorApp1/Pages/Index.razor
+++ b/BlazorApp1/Pages/Index.razor
@@ -13,6 +13,6 @@ Welcome to your RPG classroom.
 
     protected override async Task OnInitializedAsync()
     {
-        user = user.buildUser();
+        user.buildUser();
     }
 }
