--- a/BlazorApp1/Shared/NavMenu.razor
+++ b/BlazorApp1/Shared/NavMenu.razor
@@ -56,6 +56,6 @@
 
     protected override async Task OnInitializedAsync()
     {
-        user = user.buildUser();
+        user.buildUser();
     }
 }
