--- a/BlazorApp1/Pages/Login.razor
+++ b/BlazorApp1/Pages/Login.razor
@@ -115,7 +115,7 @@ else
         }
 
         User.UserName = name;
-        user = user.buildUser();
+        user.buildUser();
 
         // Generate a 128-bit salt using a sequence of
         // cryptographically strong random bytes.
