--- a/BlazorApp1/Pages/MakeSkillTree.razor.css
+++ b/BlazorApp1/Pages/MakeSkillTree.razor.css
@@ -1,13 +1,13 @@
 ﻿.draggable {
-    width: 2%;
-    min-height: 2.5em;
     margin: 1rem 0 0 1rem;
-    background-color: #29e;  
+    background-color: #29e;
     color: white;
     border-radius: 0.75em;
     transform: translate(0px, 0px);
     position: absolute;
     text-align: center;
+    display: block;
+    overflow: auto;
 }
 
 .resizedrag {
