--- a/BlazorApp1/Pages/Persona.razor
+++ b/BlazorApp1/Pages/Persona.razor
@@ -2,7 +2,7 @@
 
 @using Objects
 
-<h3>Welcome @User.UserName (@user.Type): level #@user.Level</h3>
+<h3>Welcome @User.UserName (@user.Type): general level #@user.Level</h3>
 
 <br/>
 
@@ -40,11 +40,12 @@
 </div>
 
 <div class="container">
-    current skill distribution:
+    Current skill level distribution:
     <br />
     @foreach(string[] s in user.skillDistribution)
     {
         <p style ="display:inline">@s[0]</p>
+        <p style="display:inline"> - </p>
         <p style="display:inline">@s[1]</p>
         <br/>
     }
