--- a/BlazorApp1/Pages/SkillTree.razor
+++ b/BlazorApp1/Pages/SkillTree.razor
@@ -36,7 +36,7 @@
 {
     @foreach (Node node in Nodes)
     {
-        <div id="@node.name" class="nodeCSS" @onclick="() => NodePage(node)"> <p> @node.name </p> </div>
+        <div id="@node.name" class="nodeCSS" @onclick="() => NodePage(node)"> <p style="color:black"> @node.name </p> </div>
         @if (node.userAt)
         {
             <div id="@(node.name+"userIcon")" class="UserCSS"> </div>
