--- a/BlazorApp1/Pages/TakeAssignment.razor
+++ b/BlazorApp1/Pages/TakeAssignment.razor
@@ -3,30 +3,46 @@
 @using Objects
 
 @inject NavigationManager UriHelper
+@inject IJSRuntime JS;
 
-<h3>TakeAssignment</h3>
-
-@foreach (AssignmentQuestion Q in Questions)
+@if (!Review)
 {
-    <p> @Q.question </p>
-    <from>
-        @foreach(string Op in Q.options)
-        {
-            <input type="@Q.type" id=@Op  @bind="Q.inputedAnswers" />
-            <label> @Op</label> 
-            <br/>
-        }
-    </from>
-}
+    <h3>Take assignment</h3>
+
+    @foreach (AssignmentQuestion Q in Questions)
+    {
+        <p> @Q.question </p>
+        <from>
+            @foreach (string Op in Q.options)
+            {
+                <input type="@Q.type" id=@Op  name="@Q.type" value="@Op"/>
+                <label> @Op</label> 
+                <br/>
+            }
+        </from>
+    }
 
 <br />
 <button class="btn btn-primary" @onclick="Submit">Submit</button>
-
-@foreach(AssignmentQuestion Q in Questions)
-{
-    <p>@Q.question</p>
-    <p>@Q.inputedAnswers</p>
 }
+else{
+    <h3>Assignment taken</h3>
+
+    @foreach(AssignmentQuestion Q in Questions)
+    {
+        if(Q.inputedAnswers != null)
+        {
+            <p>@Q.question</p>
+            foreach(string ans in Q.inputedAnswers)
+            {
+                <p>@ans</p>
+            }
+            <p> Answer: @Q.correct</p>
+        }
+    }
+    <button class="btn btn-primary" @onclick="Finished">Finished</button>
+}
+
 
 @code {
 
@@ -36,10 +52,8 @@
     private string FolderPath =  Directory.GetCurrentDirectory() + @"\AssignmentFolder\";
     private List<AssignmentQuestion> Questions;
     AssignmentQuestion question;
-    private bool QuestionSec;
-    private bool TypeSec;
-    private bool OptionSec;
-    private bool AnswerSec;
+    private bool QuestionSec, TypeSec, OptionSec, AnswerSec;
+    private bool Review = false;
 
     private string inputAnswer;
 
@@ -117,10 +131,38 @@
         }
     }
 
-    public void Submit()
+    public async void Submit()
+    {
+        string ans = "";
+        foreach (AssignmentQuestion Q in Questions)
+        {
+            if (Q.type == "radio")
+            {
+                ans = await JS.InvokeAsync<string>("RadioButtons", Q.type);
+                Q.inputedAnswers = ans.Split(';');
+                Q.correctInput();
+            }
+            else if (Q.type == "checkbox")
+            {
+                ans = await JS.InvokeAsync<string>("CheckBoxs", Q.type);
+                Q.inputedAnswers = ans.Split(';');
+                Q.correctInput();
+            }
+            else if (Q.type == "text")
+            {
+                //Doesn't work yet
+                //ans = await JS.InvokeAsync<string>("TextFeild", Q.type);
+                //Q.inputedAnswers = ans.Split(';');
+                //Q.correctInput();
+            }
+        }
+
+        Review = true;
+    }
+
+    public void Finished()
     {
         UriHelper.NavigateTo($"assignments");
     }
-
 
 }
